# uda_connect

./: .gitignore  Makefile  README.md  docker-compose.yaml
deployment/: connection-api.yaml  connection-tracker.yaml  db-configmap.yaml  db-secret.yaml  kafka.yaml  location-api.yaml  location-processor.yaml  mongo.yaml  person-api.yaml  postgres.yaml  udaconnect-api.yaml  udaconnect-app.yaml
docs/: architecture_decisions.txt  openapi.yaml  postman.json
kind/: config.yaml
modules/api/: .flake8  Dockerfile  Makefile  base_app.py  connection-api.dockerfile  connection-tracker.dockerfile  connection_api.py  connection_tracker_api.py  init_db.py  location-api.dockerfile  location-processor.dockerfile  location.json  location_api.py  location_processor.py  main.py  person-api.dockerfile  person_api.py  pyproject.toml  requirements.txt
modules/api/app/: config.py
modules/api/app/udaconnect/: connection_aggregator.py  connection_service.py  connection_tracker.py  debug_timer.py  location_collector.py  location_service.py  models.py  person_service.py  services.py
modules/api/base/: base_app.py  config.py  models.py
modules/api/connection_api/: connection_aggregator.py  connection_api.py
modules/api/connection_tracker/: connection_tracker.py
modules/api/connection_tracker_api/: connection_pb2_grpc.py
modules/api/connection_tracker_grpc/: connection.proto  connection_pb2.py  connection_pb2_grpc.py
modules/api/location_api/: location_api.py  location_collector.py
modules/api/person_api/: person.json  person_api.py  person_service.py
(+5 files in other folders)
