[tool.poetry]
name = "udaconnect-api"
version = "0.1.0"
description = ""
authors = ["Radim Cajzl <radim.cajzl@eon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
grpcio = "^1.54.2"
kafka-python = "^2.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pip-audit = "^2.5.5"
grpcio-tools = "^1.54.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
  "connection_tracker_api.*"
]
ignore_errors = true
